--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,76 @@
 ---
-import Layout from '@/layouts/Layout.astro';
+import Github from "@/components/icons/Github.astro";
+import Twitter from "@/components/icons/Twitter.astro";
+import Linkedin from "@/components/icons/Linkedin.astro";
+import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1 class="text-2xl text-white">Hola, soy amti</h1>
-	</main>
-</Layout>
+<Layout title="Hola, soy amti">
+  <header
+    class="container relative mx-auto flex max-w-4xl items-center justify-start gap-x-8 overflow-hidden py-6"
+  >
+    <>
+      <div
+        class="dark-bg-radial-gradient absolute start-1/2 top-[150px] -z-[1] h-[300px] w-[1052px] -translate-x-1/2 -translate-y-[300px]"
+      >
+      </div>
+    </>
+    <picture
+      class="h-48 w-48 rounded-full bg-gradient-to-br from-neutral-500 to-neutral-900 shadow-xl"
+    >
+      <img
+        src="amti.jpg"
+        alt="Profile picture"
+        width="200"
+        height="200"
+        class="maskimage h-48 w-48 rounded-full object-cover p-0.5 shadow-xl"
+      />
+    </picture>
+    <div class="flex flex-1 flex-col items-start space-y-4">
+      <h1
+        class="inline-block bg-gradient-to-r from-pink-400 via-pink-600 to-indigo-800 bg-clip-text text-6xl font-bold leading-tight text-transparent"
+      >
+        Hola, soy amti
+      </h1>
+      <h2 class="text-3xl font-semibold text-indigo-200">
+        Desarrollador Frontend
+      </h2>
+      <p class="text-balance text-base text-neutral-100">
+        Soy desarrollador web y front-end, me gusta crear aplicaciones web.
+        También me gusta ayudar a otros a aprender y crecer.
+      </p>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-</style>
+      <nav
+        class="flex items-center justify-center gap-x-4 self-start rounded-md border border-neutral-100 px-4 py-2"
+      >
+        <a
+          href="https://github.com/matiaspunx"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-neutral-100 transition-all hover:scale-110 hover:text-neutral-200"
+        >
+          <Github />
+        </a>
+
+        <a
+          href="https://twitter.com/amti_amti"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-neutral-100 transition-all hover:scale-110 hover:text-neutral-200"
+        >
+          <Twitter />
+        </a>
+
+        <a
+          href="https://www.linkedin.com/in/amti-amti/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-neutral-100 transition-all hover:scale-110 hover:text-neutral-200"
+        >
+          <Linkedin />
+        </a>
+      </nav>
+    </div>
+  </header>
+  <main></main>
+</Layout>
