--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,13 +16,22 @@ const { title } = Astro.props;
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
+      href="/fonts/Mona-Sans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <div class="container mx-auto mt-4 lg:max-w-6xl">
+      <slot />
+    </div>
   </body>
 </html>
 <style is:global>
@@ -59,10 +68,21 @@ const { title } = Astro.props;
     }
   }
 
+  @font-face {
+    font-family: "Mona Sans";
+    src:
+      url("/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
+      url("/fonts/Mona-Sans.woff2") format("woff2-variations");
+    font-weight: 200 900;
+    font-stretch: 75% 125%;
+  }
+
   html {
-    /* background: var(--bg-color) url(/noise@2x.webp) repeat; */
-    background: var(--bg-color);
-    background-size: 224px;
+    background-color: var(--bg-color);
+    background-image: url(/noise-extra.webp), url(/bg.webp);
+    background-repeat: repeat, no-repeat;
+    background-size: 224px, cover;
+    background-blend-mode: darken, soft-light;
     scroll-behavior: smooth;
     scrollbar-gutter: stable;
 
@@ -86,7 +106,7 @@ const { title } = Astro.props;
 
   @media (prefers-color-scheme: light) {
     html {
-      background: var(--bg-color);
+      background-color: var(--bg-color);
     }
   }
 
