--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,76 +1,128 @@
 ---
-import Github from "@/components/icons/Github.astro";
-import Twitter from "@/components/icons/Twitter.astro";
-import Linkedin from "@/components/icons/Linkedin.astro";
+import Avatar from "@/components/Avatar.astro";
 import Layout from "@/layouts/Layout.astro";
+import ButtonShine from "@/components/ButtonShine.astro";
+import AstroIcon from "@/components/icons/AstroIcon.astro";
+import NextIcon from "@/components/icons/NextIcon.astro";
+import ReactLogo from "@/components/icons/ReactLogo.astro";
+import TailwindIcon from "@/components/icons/TailwindIcon.astro";
+import CssIcon from "@/components/icons/CssIcon.astro";
+import HtmlIcon from "@/components/icons/HtmlIcon.astro";
 ---
 
 <Layout title="Hola, soy amti">
-  <header
-    class="container relative mx-auto flex max-w-4xl items-center justify-start gap-x-8 overflow-hidden py-6"
-  >
-    <>
-      <div
-        class="dark-bg-radial-gradient absolute start-1/2 top-[150px] -z-[1] h-[300px] w-[1052px] -translate-x-1/2 -translate-y-[300px]"
-      >
-      </div>
-    </>
-    <picture
-      class="h-48 w-48 rounded-full bg-gradient-to-br from-neutral-500 to-neutral-900 shadow-xl"
-    >
-      <img
-        src="amti.jpg"
-        alt="Profile picture"
-        width="200"
-        height="200"
-        class="maskimage h-48 w-48 rounded-full object-cover p-0.5 shadow-xl"
-      />
-    </picture>
-    <div class="flex flex-1 flex-col items-start space-y-4">
+  <header>
+    <div class="flex flex-col items-center space-y-4">
       <h1
-        class="inline-block bg-gradient-to-r from-pink-400 via-pink-600 to-indigo-800 bg-clip-text text-6xl font-bold leading-tight text-transparent"
+        class="font-mona inline-block bg-gradient-to-r from-indigo-600 via-purple-500 to-pink-100 bg-clip-text text-4xl font-extrabold leading-tight tracking-tight text-transparent md:text-7xl lg:text-9xl lg:leading-tight"
       >
-        Hola, soy amti
+        Hola, soy <span
+          class="inline-block rounded-lg bg-pink-500/50 px-3 transition hover:bg-pink-500/30"
+          >amti</span
+        >
       </h1>
-      <h2 class="text-3xl font-semibold text-indigo-200">
-        Desarrollador Frontend
-      </h2>
-      <p class="text-balance text-base text-neutral-100">
-        Soy desarrollador web y front-end, me gusta crear aplicaciones web.
-        También me gusta ayudar a otros a aprender y crecer.
-      </p>
-
-      <nav
-        class="flex items-center justify-center gap-x-4 self-start rounded-md border border-neutral-100 px-4 py-2"
+      <h2
+        class="font-mona text-2xl font-semibold leading-tight tracking-tight text-indigo-200 lg:text-4xl"
       >
-        <a
-          href="https://github.com/matiaspunx"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-neutral-100 transition-all hover:scale-110 hover:text-neutral-200"
-        >
-          <Github />
-        </a>
-
-        <a
-          href="https://twitter.com/amti_amti"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-neutral-100 transition-all hover:scale-110 hover:text-neutral-200"
-        >
-          <Twitter />
-        </a>
-
-        <a
-          href="https://www.linkedin.com/in/amti-amti/"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-neutral-100 transition-all hover:scale-110 hover:text-neutral-200"
-        >
-          <Linkedin />
-        </a>
-      </nav>
+        Desarrollo experiencias web
+      </h2>
     </div>
   </header>
-  <main></main>
+  <main>
+    <section
+      id="about"
+      class="mx-auto my-8 grid max-w-3xl grid-cols-1 gap-2 rounded-lg border border-neutral-950/60 bg-neutral-950/40 p-5 lg:grid-cols-3"
+    >
+      <div
+        class="order-2 col-span-1 flex flex-col items-center justify-center space-y-4 lg:order-1 lg:col-span-2 lg:items-start"
+      >
+        <h2 class="text-2xl font-semibold text-indigo-200">
+          Soy desarrollador web y front-end
+        </h2>
+        <p
+          class="text-balance text-center text-base text-neutral-100 lg:text-left"
+        >
+          Me gusta crear aplicaciones web y también me gusta ayudar a otros a
+          aprender y crecer.
+        </p>
+        <p class="text-balance text-base text-neutral-100">
+          Trabajo con las siguientes tecnologías:
+        </p>
+      </div>
+      <div
+        class="relative order-1 col-span-1 flex items-center justify-center py-6 lg:order-2 lg:py-0"
+      >
+        <Avatar />
+      </div>
+      <div class="order-3 col-span-1 mt-6 lg:order-3 lg:col-span-3 lg:mt-4">
+        <div
+          class="flex flex-wrap justify-center gap-5 lg:justify-between lg:gap-0"
+        >
+          <ButtonShine
+            text="Astro"
+            href="https://astro.build/"
+            bgcolor="#1b1930"
+            grad1="#191361"
+            grad2="#6217b0"
+            width="fit-content"
+            height="fit-content"><AstroIcon class="mr-2 h-6 w-6" /></ButtonShine
+          >
+          <ButtonShine
+            text="Next.js"
+            href="https://nextjs.org/"
+            bgcolor="#1b1930"
+            grad1="#509ef1"
+            grad2="#0c46b7"
+            width="fit-content"
+            height="fit-content"><NextIcon class="mr-2 h-6 w-6" /></ButtonShine
+          >
+          <ButtonShine
+            text="React"
+            href="https://reactjs.org/"
+            bgcolor="#1b1930"
+            grad1="#31304a"
+            grad2="#31736d"
+            width="fit-content"
+            height="fit-content"><ReactLogo class="mr-2 h-6 w-6" /></ButtonShine
+          >
+          <ButtonShine
+            text="Tailwind"
+            href="https://tailwindcss.com/"
+            bgcolor="#1b1930"
+            grad1="#0b1120"
+            grad2="#0ea5e9"
+            width="fit-content"
+            height="fit-content"
+            ><TailwindIcon class="mr-2 h-6 w-6" /></ButtonShine
+          >
+          <ButtonShine
+            text="CSS"
+            href="https://developer.mozilla.org/es/docs/Web/CSS"
+            bgcolor="#1b1930"
+            grad1="#2849e4"
+            grad2="#1b84c1"
+            width="fit-content"
+            height="fit-content"><CssIcon class="mr-2 h-6 w-6" /></ButtonShine
+          >
+          <ButtonShine
+            text="HTML"
+            href="https://developer.mozilla.org/es/docs/Web/HTML"
+            bgcolor="#1b1930"
+            grad1="#dc4d24"
+            grad2="#f7814e"
+            width="fit-content"
+            height="fit-content"><HtmlIcon class="mr-2 h-6 w-6" /></ButtonShine
+          >
+        </div>
+      </div>
+    </section>
+  </main>
 </Layout>
+<style>
+  .badge {
+    @apply inline-block cursor-pointer rounded-md border border-neutral-700 px-2 py-1 transition;
+    &:hover {
+      @apply scale-105 border-neutral-500;
+    }
+  }
+</style>
