--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -188,4 +188,39 @@ const { title } = Astro.props;
       transparent
     ) !important;
   }
+
+  /* content grid */
+  .content-grid {
+    --padding-inline: 2rem;
+    --content-max-width: 80ch;
+    --breackout-max-width: 95ch;
+    --breackout-size: calc(
+      (var(--breackout-max-width) - var(--content-max-width)) / 2
+    );
+
+    display: grid;
+    grid-template-columns:
+      [full-width-start] minmax(var(--padding-inline), 1fr)
+      [breackout-start] minmax(0, var(--breackout-size))
+      [content-start] min(
+        100% - (var(--padding-inline) * 2),
+        var(--content-max-width)
+      )
+      [content-end]
+      minmax(0, var(--breackout-size)) [breackout-end]
+      minmax(var(--padding-inline), 1fr) [full-width-end];
+  }
+
+  .content-grid > :not(.breackout, .full-width) {
+    grid-column: content;
+  }
+
+  .content-grid > .breackout {
+    grid-column: breackout;
+  }
+
+  .content-grid > .full-width {
+    grid-column: full-width;
+  }
+  /* end content grid */
 </style>
