--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import HtmlIcon from "@/components/icons/HtmlIcon.astro"; */
             text="Tailwind"
             href="https://tailwindcss.com/"
             bgcolor="#1b1930"
-            grad1="#0b1120"
+            grad1="#08246b"
             grad2="#0ea5e9"
             width="fit-content"
             height="fit-content"
