--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import HtmlIcon from "@/components/icons/HtmlIcon.astro"; */
           crecer.
         </p>
         <p class="text-balance text-base text-neutral-100">
-          Por ahora trabajo con las siguientes tecnologías:
+          Me enfoco en las siguientes tecnologías:
         </p>
       </div>
       <div
